@@ -11,6 +11,7 @@
 - update LDAP auth - add autodectect option.
 - correct test for libhesiod.
 - correct directory cleanup in mount modules.
+- merge key and wildcard LDAP query for lookups.
 
 29/6/2006 autofs-5.0.0_beta6
 ----------------------------
